--- a/public/styles/styles/_leaderboard.scss
+++ b/public/styles/styles/_leaderboard.scss
@@ -2,7 +2,7 @@
 .leaderboard-header {
   font-family: 'Quicksand-regular', sans-serif;
   text-align: center;
-  background-color: rgb(211, 211, 211);
+  background-color: #e8e8e8;
   border-left: solid 1px black;
   margin: 0;
   padding: 6px 0;
